.metadata/.plugins/org.eclipse.cdt.ui/UART_test2.build.log
16:11:20 **** Incremental Build of configuration Debug for project UART_test2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:8: warning: implicit declaration of function '__HAL_UART_GET_FLAG'; did you mean '__HAL_PWR_GET_FLAG'? [-Wimplicit-function-declaration]
    if (__HAL_UART_GET_FLAG(&huart2, UART_FLAG_RXNE) == SET) {
        ^~~~~~~~~~~~~~~~~~~
        __HAL_PWR_GET_FLAG
../Core/Src/main.c:103:29: error: 'huart2' undeclared (first use in this function)
    if (__HAL_UART_GET_FLAG(&huart2, UART_FLAG_RXNE) == SET) {
                             ^~~~~~
../Core/Src/main.c:103:29: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:103:37: error: 'UART_FLAG_RXNE' undeclared (first use in this function); did you mean 'USART_SR_RXNE'?
    if (__HAL_UART_GET_FLAG(&huart2, UART_FLAG_RXNE) == SET) {
                                     ^~~~~~~~~~~~~~
                                     USART_SR_RXNE
../Core/Src/main.c:104:5: warning: implicit declaration of function 'HAL_UART_Receive'; did you mean 'HAL_PWR_DeInit'? [-Wimplicit-function-declaration]
     HAL_UART_Receive(&huart2, (uint8_t *) &handshakeCAM, 1, 100);
     ^~~~~~~~~~~~~~~~
     HAL_PWR_DeInit
../Core/Src/main.c:106:6: warning: implicit declaration of function 'HAL_UART_Transmit'; did you mean 'HAL_PWR_DeInit'? [-Wimplicit-function-declaration]
      HAL_UART_Transmit(&huart2, (uint8_t *) &Ack2CAM, 1, 100);
      ^~~~~~~~~~~~~~~~~
      HAL_PWR_DeInit
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:11:21 Build Failed. 3 errors, 3 warnings. (took 716ms)

